# play

./: justfile
game-engine/: Cargo.toml  build.rs
game-engine/src/: bluetooth.rs  effects.rs  events.rs  lib.rs  systems.rs
scripts/: build-wasm.sh
src/components/: BluetoothDebugPanel.vue
src/pages/: GamePage.vue
src/services/: BluetoothService.ts
src/types/: GameEngineExtended.ts
