[package]
name = "app4dog-game-engine"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Rust/Bevy WASM game engine for App4.Dog interactive pet training"
authors = ["brianh@elastic.ventures"]
license = "MIT"

[lib]
name = "app4dog_game_engine"
crate-type = ["cdylib"]

[dependencies]
# Full Bevy features for complex pet training game
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",        # Window management
    "bevy_render",       # Rendering system
    "bevy_core_pipeline", # Rendering pipeline
    "bevy_sprite",       # 2D sprites
    "bevy_text",         # Text rendering
    "bevy_ui",           # UI system
    "bevy_asset",        # Asset loading
    "bevy_scene",        # Scene management
    "bevy_animation",    # Animation system
    "bevy_gltf",         # GLTF model support
    "bevy_audio",        # Audio system
    "png",               # PNG image support
    "vorbis",            # Audio codec
    "webgl2",            # WebGL backend
] }
bevy_hanabi = "0.16"   # GPU particle system for ribbon explosions
bevy_web_asset = "0.11.0"  # HTTP asset loading for WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Location",
    "Response",
    "Request",
    "HtmlCanvasElement",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "CustomEvent",
    "CustomEventInit",
    "console",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ron = "0.8"
# specta removed - using manual type sync for simplicity
wasm-bindgen-futures = "0.4"
regex-lite = "0.1"
thiserror = "1.0"
# Local critter-keeper crate
critter-keeper = { path = "../../critter-keeper", default-features = false, features = ["bevy"] }
# Force older ahash version that uses getrandom 0.2
ahash = "0.7"
# Explicit getrandom with wasm support
[dependencies.getrandom]
version = "0.2"
features = ["js"]

# Web-specific optimizations
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = "0.4"

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

# Development dependencies for testing
[dev-dependencies]
wasm-bindgen-test = "0.3"


# Profile for WASM builds - optimize for size (Bevy cheatbook recommendations)
[profile.release]
opt-level = "z"      # Optimize for size over speed
lto = true           # Link-time optimization
codegen-units = 1    # Most aggressive optimization
panic = "abort"      # Don't include unwinding code
strip = true         # Strip debug symbols

# Disable automatic wasm-opt (we'll run it manually with correct flags)
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Profile for development builds
[profile.dev]
opt-level = 1
